--- a/package.json
+++ b/package.json
@@ -4,24 +4,33 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "run-s typecheck lint start",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint --ext .js,.astro src/**/*.{js,astro} --fix --ignore-path .gitignore",
+    "lint": "eslint --ext .js,.astro 'src/**/*.{js,astro}' --fix --ignore-path .gitignore",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@astrojs/preact": "^1.2.0",
+    "@astrojs/rss": "^1.0.3",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.12",
+    "preact": "^10.11.3",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-astro": "^0.21.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
-    "prettier-plugin-astro": "^0.7.0"
+    "prettier-plugin-astro": "^0.7.0",
+    "prettier-plugin-tailwindcss": "^0.2.0"
   }
 }
